BUG#33243 transparent_union unhelpful on OS X PPC64